--- a/ethics_quiz.html
+++ b/ethics_quiz.html
@@ -50,10 +50,10 @@
       cursor: pointer;
       background: #f0f0f0;
     }
-    /* スマホ表示時にフォントサイズ90% */
+    /* スマホ表示時に一般的な文字サイズ16px */
     @media (max-width: 600px) {
       body {
-        font-size: 90%;
+        font-size: 16px;
       }
     }
   </style>
