ethics_quiz.html を更新

--- a/ethics_quiz.html
+++ b/ethics_quiz.html
@@ -80,7 +80,7 @@
     <div class="question">15. 前５世紀頃ギリシャでは、授業料をとって教育を行う専門知識人である <span class="toggle">（<span class="answer">ソフィスト</span>）</span> が議論の中心的な役割を担った。</div>
     <div class="question">16. ソフィストは“徳”を意味する <span class="toggle">（<span class="answer">アレテー</span>）</span> の教師として市民教育を行った。（ここでいう徳とは、成功や人に勝つための能力のこと）</div>
     <div class="question">17. ソフィストの一人であるプロタゴラスは、「人間は万物の <span class="toggle">（<span class="answer">尺度</span>）</span> である」とした。</div>
-    <div class="question">18. 上記17の考え方は、人間一人ひとりの判断が物事の真偽の基準である（超約人それぞれ）とする <span class="toggle">（<span class="answer">相対主義</span>）</span> の代表例である。</div>
+    <div class="question">18. 上記17の考え方は、人間一人ひとりの判断が物事の真偽の基準である <span class="toggle">（<span class="answer">相対主義</span>）</span> の代表例である。</div>
     <div class="question">19. ソフィストの一人であるゴルギアスは、言論により説得する能力を重要視する <span class="toggle">（<span class="answer">弁論術</span>）</span> を教えた。</div>
     <div class="question">20. ソクラテスは、人々との <span class="toggle">（<span class="answer">対話</span>）</span> (ディアロゴス) による哲学をおこなった。</div>
     <div class="question">21. ソクラテスは、ソフィストたちは大切なことを知らないにもかかわらず、知っていると思い込んで無知の状態にあることに気づき、知らないことを率直に認める <span class="toggle">（<span class="answer">不知の自覚</span>）</span> をうながした。</div>
@@ -99,10 +99,22 @@
       33. 以下の表をうめよ<br>
       <table>
         <tr><th>四元徳</th><th>説明</th></tr>
-        <tr><td>知恵</td><td class="toggle">（<span class="answer">思慮深く判断する力</span>）</td></tr>
-        <tr><td>勇気</td><td class="toggle">（<span class="answer">正義のために恐れず行動する力</span>）</td></tr>
-        <tr><td>節制</td><td class="toggle">（<span class="answer">欲望や感情を理性に従わせる力</span>）</td></tr>
-        <tr><td>正義</td><td class="toggle">（<span class="answer">各部分が本来の役割を果たし、全体が調和する状態</span>）</td></tr>
+        <tr>
+          <td class="toggle">（<span class="answer">知恵</span>）</td>
+          <td>思慮深く判断する力</td>
+        </tr>
+        <tr>
+          <td class="toggle">（<span class="answer">勇気</span>）</td>
+          <td>正義のために恐れず行動する力</td>
+        </tr>
+        <tr>
+          <td class="toggle">（<span class="answer">節制</span>）</td>
+          <td>欲望や感情を理性に従わせる力</td>
+        </tr>
+        <tr>
+          <td class="toggle">（<span class="answer">正義</span>）</td>
+          <td>各部分が本来の役割を果たし、全体が調和する状態</td>
+        </tr>
       </table>
     </div>
     <div class="question">34. プラトンは、教育を通じて知恵の徳を培った哲学者が実際の政治にあたる <span class="toggle">（<span class="answer">哲人政治</span>）</span> によってのみ、社会に正義を実現する理想国家が生まれると考えた。</div>
