--- a/zenki_kimatu.html
+++ b/zenki_kimatu.html
@@ -67,7 +67,7 @@
     <div class="question">10. アリストテレスは、「人間は <span class="toggle">（<span class="answer">社会的</span>）</span> 動物である」と述べた。</div>
     <div class="question">11. 人の能力や功績に応じて、名誉や利益を比例的に配分する正義を <span class="toggle">（<span class="answer">配分的</span>）</span> 正義という。</div>
     <div class="question">12. 裁判などで利害や損失を均等に調整する正義を <span class="toggle">（<span class="answer">矯正的</span>）</span> 正義という。</div>
-    <div class="question">13. 共同体を営む上で重要とされる他者への愛を、アリストテレスは <span class="toggle">（<span class="answer">友愛</span>）</span> とよんだ。</div>
+    <div class="question">13. 共同体を営む上で重要とされる他者への愛を、アリストテレスは <span class="toggle">（<span class="answer">フィリア</span>）</span> とよんだ。</div>
     <div class="question">14. ヘレニズム時代には、心の平安である <span class="toggle">（<span class="answer">アタラクシア</span>）</span> を目指すエピクロス派が生まれた。</div>
     <div class="question">15. エピクロスは、苦痛や恐怖から解放された精神的 <span class="toggle">（<span class="answer">快楽</span>）</span> こそが最高の善であるとした。</div>
     <div class="question">16. エピクロスは、公的な生活から離れることを意味する「 <span class="toggle">（<span class="answer">隠れて</span>）</span> 生きよ」という言葉を残した。</div>
@@ -123,3 +123,4 @@
   </script>
 </body>
 </html>
+
